2014-04-14  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the namespace protection workaround for Boost described
	at http://www.boost.org/doc/libs/1_55_0/doc/html/foreach.html

	* Adding AlphaS_FlavorScheme and AlphaS_NumFlavors metadata flags
	as optional specific versions for use by the AlphaS system,
	particularly if the alpha_s QCD evolution doesn't match that of
	the PDF itself.

2014-04-13  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a lhapdf.pc file for use by pkg-config

	* Check for sizes of subgrids required by each interpolator
	algorithm (linear ipol requires >= 2 knots, cubic requires >= 4).

	* Renumberings of several MRST and MSTW sets's global IDs:
	    MRST2004qed_proton 20461->20463
	    MRST2004qed_neutron 20462->20465
	    MSTW2008lo90cl 21041->21050
	    MSTW2008nlo90cl 21141->21150
	    MSTW2008nnlo90cl 21241->21250
	    MSTW2008lo90cl_nf3 23041->23050
	    MSTW2008lo90cl_nf4 23141->23150
	    MSTW2008nlo90cl_nf3 23241->23250
	    MSTW2008nlo90cl_nf4 23341->23350
	    MSTW2008nnlo90cl_nf3 23541->23550
	    MSTW2008nnlo90cl_nf4 23641->23650

	* Updates to the CONFIGFLAGS documention, removing some unused
	flags and adding the new Note flag.

	* Printing out a Note metadata entry on set initialization, if one is found.

	* Removing the metadata() functions from Info, since they were
	unused and did not respect the cascading design.

2014-03-25  Andy Buckley  <andy.buckley@cern.ch>

	* More tweaking of the uncertainty function behaviour.

	* Adding in_range, in_open_range, in_closed_range functions.

2014-03-24  Andy Buckley  <andy.buckley@cern.ch>

	* Removing compatibility auto-cast of PDFUncertainty to
	vector<double>, converting remaining functions to use the struct,
	rationalising the previously split uncertainty() implementation,
	and code tidying.

	* Converting the uncertainty functions to add a no-copy version
	and to return a new struct rather than a vector<double>.

2014-03-23  Andy Buckley  <andy.buckley@cern.ch>
